--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,183 @@
+@import './fonts.css';
+
+:root {
+    --gray-text: #504F4F;
+    --background-color: #ffffff;
+    --primary-blue: #0077c8;
+    --secondary-blue: #8fc3e6;
+    --accent-color: #68bfc2;
+}
+
 * {
     margin: 0;
     padding: 0;
-    
+
+    font-family: Inter;
+
     box-sizing: border-box;
+}
+
+body {
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header-page {
+    width: 100%;
+    height: 13dvh;
+
+    color: var(--primary-blue);
+    font-size: x-large;
+
+    padding: 12px 40px;
+    margin-bottom: 24px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    user-select: none;
+}
+
+.background-colorido-header {
+    width: 100%;
+    height: 100%;
+
+    padding: 12px 40px;
+
+    border-radius: 20px;
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    gap: 16px;
+
+    background-color: rgb(143, 195, 230, .65);
+}
+
+.header-page h2 {
+    font-weight: 600;
+}
+.header-page img {
+    height: 80%;
+}
+
+main {
+    width: 90%;
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+
+    margin-bottom: 80px;
+}
+
+.titulo-home-page {
+    display: flex;
+    flex-direction: column;
+
+    padding-bottom: 48px;
+
+    border-bottom: 2px solid var(--secondary-blue);
+}
+
+.titulo-home-page h2 {
+    color: var(--primary-blue);
+
+    font-family: InterItalic;
+    font-weight: 400;
+
+    font-size: 3rem;
+}
+.titulo-home-page h3 {
+    color: var(--accent-color);
+
+    font-family: InterItalic;
+    font-weight: 400;
+
+    font-size: 2.5rem;
+}
+#descricao-website {
+    font-family: InterItalic;
+    font-weight: 500;
+    font-size: x-large;
+    color: var(--primary-blue);
+
+    width: 30%;
+    
+    text-align: end;
+    align-self: flex-end;
+}
+#explicacao-conteudo-website {
+    font-family: InterItalic;
+    font-weight: 500;
+    font-size: x-large;
+
+    width: 60%;
+    /* align-self: center; */
+
+    margin-top: 32px;
+
+    color: var(--gray-text);
+    text-align: justify;
+}
+
+
+#guias-de-acesso-title {
+    color: var(--primary-blue);
+
+    font-family: InterItalic;
+    font-weight: 550;
+
+    margin-top: 24px;
+
+    font-size: 3rem;
+}
+
+#lista-guias-de-acesso {
+    list-style: none;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    gap: 16px;
+
+    margin-top: 16px;
+
+    cursor: default;
+}
+#lista-guias-de-acesso a {
+    text-decoration: none;
+}
+#lista-guias-de-acesso a li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+
+    cursor: pointer;
+
+    font-size: xx-large;
+    color: white;
+    font-weight: 500;
+
+    min-width: 420px;
+
+    padding: 16px;
+
+    border-radius: 16px;
+
+    background-color: var(--secondary-blue);
+}
+#lista-guias-de-acesso a li:hover {
+    background-color: #7dadcc;
+}
+
+#lista-guias-de-acesso a li img {
+    height: 80%;
 }
