--- a/CSS/global_styles.css
+++ b/CSS/global_styles.css
@@ -31,7 +31,7 @@ body {
     font-size: x-large;
 
     padding: 12px 40px;
-    margin-bottom: 24px;
+    /* margin-bottom: 8px; */
 
     display: flex;
     justify-content: center;
