--- a/CSS/global_styles.css
+++ b/CSS/global_styles.css
@@ -21,6 +21,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    overflow-x: hidden;
+}
+
+.estrutura-pagina-menu {
+    width: 85vw;
+
+    align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+
+    overflow-x: hidden;
 }
 
 .header-page {
@@ -62,4 +74,85 @@ body {
 }
 .header-page img {
     height: 80%;
+}
+
+
+.navbar-esquerda {
+    width: 15vw;
+    height: 100dvh;
+
+    position: fixed;
+    left: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background-color: var(--secondary-blue);
+}
+.relative-parent {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    position: relative;
+}
+
+.close-menu {
+    position: absolute;
+
+    top: 8px;
+    right: 8px;
+
+    width: 50px;
+    height: 50px;
+
+    cursor: pointer;
+}
+
+.logo-hc {
+    width: 75%;
+    aspect-ratio: 1;
+}
+
+.lista-links-menu {
+    width: 70%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    gap: 16px;
+
+    text-decoration: none;
+}
+.lista-links-menu a {
+    width: 100%;
+    text-decoration: none;
+}
+.lista-links-menu li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+
+    font-size: xx-large;
+    font-family: InterItalic;
+    font-weight: bold;
+    color: var(--primary-blue);
+
+
+    user-select: none;
+
+    width: 100%;
+    height: 75px;
+}
+.lista-links-menu li:hover {
+    color: #004f83;
+}
+.lista-links-menu li img {
+    height: 50%;
 }
