--- a/CSS/global_styles.css
+++ b/CSS/global_styles.css
@@ -33,6 +33,8 @@ body {
     flex-direction: column;
 
     overflow-x: hidden;
+
+    transition: 250ms ease-in-out;
 }
 
 .header-page {
@@ -89,6 +91,8 @@ body {
     align-items: center;
 
     background-color: var(--secondary-blue);
+
+    transition: 300ms;
 }
 .relative-parent {
     width: 100%;
@@ -105,12 +109,14 @@ body {
     position: absolute;
 
     top: 8px;
-    right: 8px;
+    right: 4px;
 
     width: 50px;
     height: 50px;
 
     cursor: pointer;
+
+    transition: 450ms ease-out;
 }
 
 .logo-hc {
@@ -128,6 +134,8 @@ body {
     gap: 16px;
 
     text-decoration: none;
+
+    transition: 300ms ease-in-out;
 }
 .lista-links-menu a {
     width: 100%;
@@ -144,7 +152,6 @@ body {
     font-weight: bold;
     color: var(--primary-blue);
 
-
     user-select: none;
 
     width: 100%;
@@ -155,4 +162,18 @@ body {
 }
 .lista-links-menu li img {
     height: 50%;
+}
+
+
+.navbar-esquerda-escondida {
+    left: -11vw;
+}
+.lista-links-menu-escondida {
+    margin-right: 64px;
+}
+.close-menu-fechada {
+    transform: rotate(-180deg);
+}
+.estrutura-pagina-menu-expandida {
+    width: 96vw;
 }
