Feat: Página de Guia de agendamento. CSS Global de guias.

--- a/CSS/global_styles.css
+++ b/CSS/global_styles.css
@@ -63,7 +63,7 @@ body {
     border-radius: 20px;
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 
     gap: 16px;
