--- a/CSS/contato/contato.css
+++ b/CSS/contato/contato.css
@@ -1,5 +1,5 @@
-@import './global_styles.css';
-@import './fonts.css';
+@import '../global_styles.css';
+@import '../fonts.css';
 
 main {
     width: 100%;
@@ -7,17 +7,15 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
     gap: 24px;
 }
 
 #informacoes-contato-hc {
     width: 100%;
-    height: 28vh;
 
     display: flex;
     justify-content: center;
-    
 }
 
 #esquerda-informacoes-contato-hc {
@@ -28,18 +26,19 @@ main {
     justify-content: space-around;
     align-items: flex-start;
 }
-#esquerda-informacoes-contato-hc h3 {
-    width: 65%;
 
+#esquerda-informacoes-contato-hc h3 {
     user-select: none;
+
+    margin-bottom: 12px;
 
     color: var(--primary-blue);
 
     font-size: xx-large;
     font-family: InterItalic;
 }
+
 #lista-formas-de-contato-hc {
-    font-size: 1.25rem;
     text-decoration: dotted;
 
     display: flex;
@@ -47,6 +46,7 @@ main {
     align-items: flex-start;
     gap: 12px;
 }
+
 #lista-formas-de-contato-hc li {
     display: flex;
     align-items: center;
@@ -54,13 +54,13 @@ main {
 
     gap: 8px;
 }
+
 #lista-formas-de-contato-hc li span {
     font-weight: bold;
     user-select: none;
 }
-#lista-formas-de-contato-hc li img {
-    height: 1.75rem;
 
+#lista-formas-de-contato-hc li img {
     user-select: none;
 }
 
@@ -79,12 +79,13 @@ main {
 
     user-select: none;
 
+    margin-bottom: 12px;
+
     font-size: xx-large;
     font-family: InterItalic;
 }
 
 #lista-endereco-hc {
-    font-size: 1.25rem;
     text-decoration: dotted;
 
     display: flex;
@@ -92,6 +93,7 @@ main {
     align-items: flex-start;
     gap: 8px;
 }
+
 #lista-endereco-hc li {
     display: flex;
     align-items: center;
@@ -99,6 +101,7 @@ main {
 
     gap: 8px;
 }
+
 #lista-endereco-hc li span {
     font-weight: bold;
     user-select: none;
@@ -106,8 +109,6 @@ main {
 
 
 #formulario-contato-integrantes {
-    width: 75%;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -116,7 +117,6 @@ main {
 #formulario-contato-integrantes h2 {
     color: var(--primary-blue);
 
-    font-size: 2.25rem;
     font-family: InterItalic;
 
     user-select: none;
@@ -125,7 +125,6 @@ main {
 #formulario-contato-integrantes h4 {
     color: var(--primary-blue);
 
-    font-size: 1rem;
     font-family: Inter;
     font-weight: 400;
 
@@ -135,7 +134,7 @@ main {
 }
 
 .formulario-wrapper {
-    width: 70%;
+    width: 80%;
 
     align-self: center;
 
@@ -155,20 +154,15 @@ main {
 .label-formulario {
     color: var(--primary-blue);
 
-    width: 45%;
-
     display: flex;
     flex-direction: column;
 
-    font-size: 1.25rem;
     font-weight: bold;
 }
 
 .input-formulario-contato {
     width: 100%;
     margin-top: 8px;
-
-    font-size: 1.25rem;
 
     outline: none;
 
@@ -194,9 +188,6 @@ main {
 
 .textarea-form-contato {
     width: 100%;
-    height: 120px;
-
-    font-size: 1rem;
 
     border: 1px solid var(--primary-blue);
     border-radius: 15px;
@@ -213,18 +204,15 @@ main {
 
     position: relative;
 
-    box-shadow: 10px 10px 20px -5px rgba(0,0,0,0.5);
-    -webkit-box-shadow: 10px 10px 20px -5px rgba(0,0,0,0.5);
-    -moz-box-shadow: 10px 10px 20px -5px rgba(0,0,0,0.5);
+    box-shadow: 10px 10px 20px -5px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 10px 10px 20px -5px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 10px 10px 20px -5px rgba(0, 0, 0, 0.5);
 
     display: flex;
     align-items: center;
     justify-content: space-around;
 
     align-self: flex-end;
-
-    width: 150px;
-    height: 40px;
 
     border: transparent;
     border-radius: 8px;
@@ -241,6 +229,7 @@ main {
 
     transition: 300ms ease-in-out;
 }
+
 .botao-formulario:hover {
     background-color: #006bb3;
 }
@@ -248,12 +237,13 @@ main {
 .label-form-invalida {
     color: red;
 }
+
 .input-formulario-invalido {
     border-color: red;
 }
+
 .input-formulario-invalido::placeholder {
     color: rgba(197, 43, 43, 0.75);
-    font-size: .95rem;
 }
 
 .form-invalido {
@@ -268,25 +258,16 @@ main {
     justify-content: space-around;
 
     position: absolute;
-    
+
     overflow: hidden;
 
     gap: 8px;
 
     transition: 350ms ease-in-out;
 }
+
 .span-enviar {
     width: fit-content;
     transition: 350ms ease-in-out;
     transition-delay: 300ms;
-}
-
-.overflow-left {
-    left: -85%;
-}
-.email-enviado {
-    gap: 32px;
-}
-.email-enviado-remover-texto {
-    width: 90px;
 }
