--- a/CSS/faq/faq.css
+++ b/CSS/faq/faq.css
@@ -1,5 +1,5 @@
-@import './fonts.css';
-@import './global_styles.css';
+@import '../fonts.css';
+@import '../global_styles.css';
 
 main {
     width: 90%;
@@ -19,22 +19,20 @@ main {
 }
 
 .pergunta-frequente {
-    width: 60%;
-    min-height: 60px;
-
     overflow: hidden;
 
     padding: 0 12px 0px 12px;
     border-radius: 20px;
 
-    box-shadow: 0px 4px 8px -1px rgba(0,0,0,0.51);
-    -webkit-box-shadow: 0px 4px 8px -1px rgba(0,0,0,0.51);
-    -moz-box-shadow: 0px 4px 8px -1px rgba(0,0,0,0.51);
+    box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.51);
+    -webkit-box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.51);
+    -moz-box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.51);
 
     background-color: var(--secondary-blue);
 
     transition: 300ms ease-in-out;
 }
+
 .titulo-pergunta-frequente {
     width: 100%;
 
@@ -50,20 +48,15 @@ main {
     user-select: none;
     cursor: pointer;
 }
-.titulo-pergunta-frequente img {
-    height: 25px;
-}
-.titulo-pergunta-frequente h3 {
-    font-size: 2rem;
 
+.titulo-pergunta-frequente h3 {
     font-weight: 600;
     color: var(--primary-blue);
 }
+
 .paragrafo-pergunta {
     color: white;
     text-align: justify;
-
-    font-size: 1.25rem;
 
     overflow: hidden;
 
@@ -72,22 +65,17 @@ main {
     transition: 300ms ease-in-out;
 }
 
-
 .padding-bottom-aberto {
     padding-bottom: 12px;
 }
 
-
 .divider-faq {
-    width: 60%;
-    height: .45rem;
-
     margin: 24px 0;
-    
+
     border-radius: 15px;
-    box-shadow: 0px 4px 8px -1px rgba(0,0,0,0.51);
-    -webkit-box-shadow: 0px 4px 8px -1px rgba(0,0,0,0.51);
-    -moz-box-shadow: 0px 4px 8px -1px rgba(0,0,0,0.51);
+    box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.51);
+    -webkit-box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.51);
+    -moz-box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.51);
 
     background-color: var(--accent-color);
 }
