--- a/CSS/quem_somos/quem_somos.css
+++ b/CSS/quem_somos/quem_somos.css
@@ -1,5 +1,5 @@
-@import './global_styles.css';
-@import './fonts.css';
+@import '../global_styles.css';
+@import '../fonts.css';
 
 main {
     width: 100%;
@@ -8,7 +8,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 48px;
+    gap: 24px;
 
     margin-top: 32px;
 }
@@ -19,8 +19,8 @@ main {
     align-items: center;
     justify-content: center;
 
-    width: 350px;
-    height: 500px;
+    width: 310px;
+    height: 460px;
 
     padding: 16px;
 
