--- a/CSS/contato/contato.css
+++ b/CSS/contato/contato.css
@@ -1,5 +1,7 @@
-@import '../global_styles.css';
 @import '../fonts.css';
+@import '../global_styles.css';
+@import '../global_styles_large.css';
+@import '../global_styles_extra_large.css';
 
 main {
     width: 100%;
