--- a/CSS/prescricoes/prescricoes_extra_large.css
+++ b/CSS/prescricoes/prescricoes_extra_large.css
@@ -1,3 +1,5 @@
 @media (min-width: 1300px) {
-    /* NAO PRECISOU POIS O PADRÃO JÁ É RESPONSIVO PARA ESSA RESOLUÇÃO */
+    main {
+        width: 90%;
+    }
 }
