--- a/CSS/quem_somos/quem_somos.css
+++ b/CSS/quem_somos/quem_somos.css
@@ -1,5 +1,7 @@
-@import '../global_styles.css';
 @import '../fonts.css';
+@import '../global_styles.css';
+@import '../global_styles_large.css';
+@import '../global_styles_extra_large.css';
 
 main {
     width: 100%;
@@ -19,20 +21,17 @@ main {
     align-items: center;
     justify-content: center;
 
-    width: 310px;
-    height: 460px;
-
     padding: 16px;
 
     border: 2px solid var(--primary-blue);
     border-radius: 15px;
 
-    box-shadow: 0px 20px 17px 0px rgba(0,0,0,0.21);
-    -webkit-box-shadow: 0px 20px 17px 0px rgba(0,0,0,0.21);
-    -moz-box-shadow: 0px 20px 17px 0px rgba(0,0,0,0.21);
+    box-shadow: 0px 20px 17px 0px rgba(0, 0, 0, 0.21);
+    -webkit-box-shadow: 0px 20px 17px 0px rgba(0, 0, 0, 0.21);
+    -moz-box-shadow: 0px 20px 17px 0px rgba(0, 0, 0, 0.21);
 }
+
 .foto-integrante {
-    width: 85%;
     aspect-ratio: 1;
 
     border-radius: 50%;
@@ -46,18 +45,15 @@ main {
 
     background-color: var(--primary-blue);
 }
-.foto-integrante > img {
+
+.foto-integrante>img {
     height: 100%;
 }
-.card-integrante > h4 {
-    font-size: x-large;
+
+.card-integrante>h4 {
     text-align: center;
 
     min-height: 50px;
-}
-.card-integrante > h5 {
-    margin-top: 8px;
-    font-size: large;
 }
 
 .midias-sociais {
@@ -71,6 +67,7 @@ main {
 
     gap: 24px;
 }
-.midias-sociais > * {
+
+.midias-sociais>* {
     user-select: none;
 }
