--- a/CSS/registro_paciente/registro_paciente.css
+++ b/CSS/registro_paciente/registro_paciente.css
@@ -1,11 +1,13 @@
-@import "../fonts.css";
-@import "../global_styles.css";
+@import '../fonts.css';
+@import '../global_styles.css';
+@import '../global_styles_large.css';
+@import '../global_styles_extra_large.css';
 @import "../guias_styles/guias_styles.css";
+@import "../guias_styles/guias_styles_large.css";
 @import "../guias_styles/guias_styles_extra_large.css";
 
 
 main {
-    width: 90%;
     height: fit-content;
 
     align-self: center;
