Feat: Responsividade SMALL em TODAS as páginas.

--- a/CSS/contato/contato.css
+++ b/CSS/contato/contato.css
@@ -1,5 +1,6 @@
 @import '../fonts.css';
 @import '../global_styles.css';
+@import '../global_styles_small.css';
 @import '../global_styles_medium.css';
 @import '../global_styles_large.css';
 @import '../global_styles_extra_large.css';
