--- a/CSS/exames/exames.css
+++ b/CSS/exames/exames.css
@@ -1,9 +1,12 @@
 @import '../fonts.css';
 @import '../global_styles.css';
+@import '../global_styles_small.css';
 @import '../global_styles_medium.css';
 @import '../global_styles_large.css';
 @import '../global_styles_extra_large.css';
+
 @import "../guias_styles/guias_styles.css";
+@import "../guias_styles/guias_styles_small.css";
 @import "../guias_styles/guias_styles_medium.css";
 @import "../guias_styles/guias_styles_large.css";
 @import "../guias_styles/guias_styles_extra_large.css";
