--- a/CSS/global_styles.css
+++ b/CSS/global_styles.css
@@ -17,7 +17,7 @@
 
 body {
     width: 100%;
-    
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,8 +50,8 @@ body {
 }
 
 .background-colorido-header {
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: 80%;
 
     padding: 12px 40px;
 
@@ -66,10 +66,13 @@ body {
     background-color: rgb(143, 195, 230, .65);
 }
 
+.telefone-navbar-selector {
+    display: none;
+}
+
 .header-page h2 {
     font-weight: 600;
 }
-
 
 .navbar-esquerda {
     height: 100dvh;
@@ -85,6 +88,7 @@ body {
 
     transition: 300ms;
 }
+
 .relative-parent {
     width: 100%;
     height: 100%;
@@ -115,10 +119,12 @@ body {
 
     transition: 300ms ease-in-out;
 }
+
 .lista-links-menu a {
     width: 100%;
     text-decoration: none;
 }
+
 .lista-links-menu li {
     display: flex;
     justify-content: space-between;
@@ -133,6 +139,7 @@ body {
 
     width: 100%;
 }
+
 .lista-links-menu li:hover {
     color: #004f83;
 }
@@ -140,6 +147,7 @@ body {
 .lista-links-menu-escondida {
     margin-right: 128px;
 }
+
 .close-menu-fechada {
     transform: rotate(-180deg);
 }
