--- a/CSS/global_styles_medium.css
+++ b/CSS/global_styles_medium.css
@@ -4,13 +4,15 @@
     }
 
     .header-page {
+        padding: 12px 8px 12px 16px;
+
         height: 13dvh;
 
         font-size: 1.25rem;
     }
 
     .header-page img {
-        height: 80%;
+        height: 60%;
     }
 
     .background-colorido-header {
@@ -23,6 +25,10 @@
 
     .navbar-esquerda {
         width: 23vw;
+    }
+
+    .telefone-navbar-selector {
+        display: none;
     }
 
     .close-menu {
