--- a/CSS/quem_somos/quem_somos_extra_large.css
+++ b/CSS/quem_somos/quem_somos_extra_large.css
@@ -1,7 +1,15 @@
 @media (min-width: 1300px) {
+    main {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+    }
+
     .card-integrante {
-        width: 310px;
-        height: 460px;
+        width: 360px;
+        height: 500px;
     }
 
     .foto-integrante {
@@ -14,6 +22,6 @@
 
     .card-integrante>h5 {
         margin-top: 8px;
-        font-size: 1.15rem;
+        font-size: 1.35rem;
     }
 }
