--- a/CSS/quem_somos/quem_somos_large.css
+++ b/CSS/quem_somos/quem_somos_large.css
@@ -1,7 +1,18 @@
 @media (min-width: 992px) {
+    main {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        flex-wrap: wrap;
+
+        gap: 24px;
+    }
+
     .card-integrante {
-        width: 240px;
-        height: 440px;
+        width: 360px;
+        height: 500px;
     }
 
     .foto-integrante {
@@ -14,6 +25,6 @@
 
     .card-integrante>h5 {
         margin-top: 8px;
-        font-size: 1.1rem;
+        font-size: 1.35rem;
     }
 }
